--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/usersmagic/en.usersmagic.git"
   },
   "engines": {
-    "node": "10.7.0"
+    "node": "14.17.0"
   },
   "author": "Yunus Gürlek",
   "license": "MIT",
@@ -22,14 +22,13 @@
   },
   "homepage": "https://github.com/usersmagic/en.usersmagic#readme",
   "dependencies": {
+    "async": "^3.2.0",
     "cluster": "^0.7.7",
-    "dotenv": "^9.0.2",
-    "express": "^4.16.4",
-    "mongoose": "^5.12.10",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.12",
     "pug": "^3.0.2",
-    "serve-favicon": "^2.5.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "serve-favicon": "^2.5.0",
+    "validator": "^13.6.0"
   }
 }
